# Sunday-voice

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
Docs/: agents.md
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_session_scheduled_at.py  b1c2d3e4f5a6_add_translation_feedback.py  d1e2f3a4b5c6_add_system_config.py  ee3f49d5d169_initial_schema.py  f2a3b4c5d6e7_add_web_speech_audio_transport.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/core/: audit.py  config.py  logging.py  metrics.py  middleware.py  rate_limit.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  audit.py  config.py  feedback.py  mixins.py  role.py  segment.py  session.py  usage.py  user.py
backend/tests/: conftest.py  test_audio_byte_limiter.py  test_auth.py  test_google_translate_provider.py  test_google_tts_provider.py  test_health.py  test_listener_ws.py  test_operator_audio_ws.py  test_pubsub.py  test_scheduler.py  test_sessions.py  test_translation_service.py  test_webrtc_transport.py  test_whisper_provider.py
deploy/: Caddyfile
deploy/systemd/: sunday-voice-api.service  sunday-voice-cleanup.service  sunday-voice-cleanup.timer  sunday-voice-frontend-build.service
docs/: architecture.md  deployment.md  listener-experience.md  non-functional-requirements.md  open-questions.md  operator-workflow.md  product-requirements.md  provider-strategy.md  roadmap.md  runbook.md  security-and-privacy.md
frontend/: index.html  openapi.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  languages.ts  main.tsx  router.tsx  speech-recognition.d.ts
scripts/: bootstrap.sh  deploy.sh  install.sh  run-migrations.sh  seed_admin.py  smoke_test.py
scripts/load-test/: gen_silent_chunk.sh  k6_load_test.js  run_tuning.sh
(+38 files in other folders)
